Rename IDs and Fix "Flex-Wrap"

--- a/style.css
+++ b/style.css
@@ -2,36 +2,35 @@ body {
   background-color: hsl(233, 47%, 7%);
   height: 100vh;
   width: 100vw;
-  overflow: scroll;
+  overflow: visible;
 }
 
 h1 {
   font-family: 'Inter', 'sans-serif';
   font-size: 2.5rem;
-  text-align:start;
-  
+  text-align: start;
 }
 
 p,
 ul,
 li {
-  font-family: 'Inter', 'sans-serif'; 
+  font-family: 'Inter', 'sans-serif';
 }
 
 .container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;  
+  flex-wrap: wrap-reverse;
   height: 100vh;
   width: 100vw;
   justify-content: center;
   align-items: center;
-  overflow: scroll;
+  overflow: auto;
 }
 
 ul {
-  list-style-type:none;
-  max-width: 369px;  
+  list-style-type: none;
+  max-width: 369px;
 }
 
 .heading {
@@ -48,21 +47,20 @@ ul {
 #stat_heading {
   font-weight: 700;
   color: white;
-  font-family: "Lexand Deca", "sans-serif";
+  font-family: 'Lexand Deca', 'sans-serif';
   font-size: 1.5rem;
   display: flex;
-  justify-content:space-between;
-  align-items:flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   padding: 0;
-
 }
 
 .stat_caption {
   color: hsla(0, 0%, 100%, 0.6);
   font-size: 1rem;
   display: flex;
-  justify-content:space-between;
-  align-items:flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   padding: 0;
   position: relative;
   top: -1.5vw;
@@ -77,7 +75,7 @@ ul {
   flex-direction: column;
 }
 
-#banner_text {
+#text_side {
   background-color: hsl(244, 38%, 16%);
   width: 540px;
   height: 446px;
@@ -86,9 +84,8 @@ ul {
   justify-content: center;
   padding: 60px;
   box-sizing: border-box;
-
-  // border-top-left-radius: 2%;
-  // border-bottom-left-radius: 2%;
+  border-top-left-radius: 2%;
+  border-bottom-left-radius: 2%;
 }
 
 #banner_image {
@@ -99,8 +96,8 @@ ul {
   position: relative;
   overflow: hidden;
 
-  // border-top-right-radius: 2%;
-  // border-bottom-right-radius: 2%;
+  border-top-right-radius: 2%;
+  border-bottom-right-radius: 2%;
 }
 
 #image_overlay {
